k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beansleycoffee
spec:
  selector:
    app: beansleycoffee
  ports:
    - port: 80
      targetPort: 3000
